--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -45,13 +45,14 @@
             android:layout_height="@dimen/button_height"
             android:text="@string/question_previous"
             style="@style/buttonEmbedded"/>
+
         <Button
             android:id="@+id/button_question_notes"
+            style="@style/buttonEmbedded"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="@dimen/button_height"
-            android:text="@string/question_notes"
-            style="@style/buttonEmbedded"/>
+            android:layout_weight="1"
+            android:text="@string/question_notes" />
         <Button
             android:id="@+id/button_question_next"
             android:layout_width="0dp"
