--- a/app/src/dev/res/values/authorities.xml
+++ b/app/src/dev/res/values/authorities.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="provider_authority">ro.code4.monitorizarevot.dev</string>
-    <string name="sync_adapter_authority">ro.code4.monitorizarevot.dev</string>
-    <string name="account_type">dev.code4.ro</string>
+    <string name="provider_authority" translatable="false">ro.code4.monitorizarevot.dev</string>
+    <string name="sync_adapter_authority" translatable="false">ro.code4.monitorizarevot.dev</string>
+    <string name="account_type" translatable="false">dev.code4.ro</string>
 </resources>
