[ISSUE_132] added Snackbar with action for resyncing forms if download failed

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="incomplete">#ACB4BE</color>
     <color name="ic_launcher_background">#FFCC01</color>
     <color name="grey">#EEEEEE</color>
+    <color name="errorRed">#b1000c</color>
 </resources>
