--- a/app/src/main/res/layout/activity_toolbar.xml
+++ b/app/src/main/res/layout/activity_toolbar.xml
@@ -23,6 +23,15 @@
             tools:context=".ToolbarActivity"
             tools:showIn="@layout/activity_toolbar" />
 
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:visibility="invisible"
+            android:indeterminateTint="@color/primary"/>
+
     </android.support.design.widget.CoordinatorLayout>
 
     <LinearLayout
